examples/test/testpolicy13562.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13562
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key30: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value40
          key40: value40
          key8: value28
      podSelector:
        matchLabels:
          key16: value8
